2009-01-14  Sam Steingold  <sds@gnu.org>

	POSIX:COPY-FILE now accepts :METHOD :HARDLINK-OR-COPY
	* modules/syscalls/calls.c (hardlink_file): accept error_p to
	indicate whether an error is to be signaled and return status
	(copy_one_file): when method == COPY_METHOD_HARDLINK_OR_COPY and
	hardlink_file() fails, fallback to copy_file_low()
	(check_copy_method): accept :HARDLINK-OR-COPY
	* utils/hln.lisp: pass :METHOD :HARDLINK-OR-COPY to POSIX:COPY-FILE

2009-01-14  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (AC_CLISP): new file: check for a clisp of a correct
	version, for packages which use clisp
	* makemake.in, configure: accept --aclocaldir=DIR
	* makemake.in: install clisp.m4 into aclocaldir

2009-01-14  Sam Steingold  <sds@gnu.org>

	* makemake.in: remove the long unsupported cross.mem stuff,
	created for running the clisp compiler inside some non-clisp
	implementation, such as AKCL

2009-01-09  Sam Steingold  <sds@gnu.org>

	* lisparit.d (FLOAT-SCALE-EXPONENT): restore the mantissa precision

2009-01-08  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (RAWSOCK:IFADDRS): fix keyword arg case

2009-01-09  Vladimir Tzankov  <vtzankov@gmail.com>

	fix image loading in multithread builds
	* spvw_memfile.d (loadmem_from_handle): do not update thread objects.
	they were/will be initialized properly (in single thread it's just
	aktenv)
	* spvw.d (init_memory): do not re-initialize the thread objects - they
	are not modified by loadmem_from_handle(); do not initialize
	O(all_mutexes) and O(all_exemptions) to NIL - they are loaded properly
	from image file

2009-01-09  Vladimir Tzankov  <vtzankov@gmail.com>

	* io.d (READ-CHAR-NO-HANG): fix EOF case when return_Values expands
	to nothing (g++)

2009-01-09 Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (SET_SP_BEFORE_SUSPEND): do not use SP() since it is not
	always exported to modules. use the address of dummy local variable

2009-01-08  Vladimir Tzankov  <vtzankov@gmail.com>
